правки в стилях sign-in

--- a/toxin/src/pages/registration/registration.scss
+++ b/toxin/src/pages/registration/registration.scss
@@ -2,7 +2,7 @@
     background-image: url("~images/registration-background.png");
     background-position-x: center;
     background-repeat: no-repeat;
-    height: 910px;
+    // height: 910px;
     display: flex;
     align-items: center;
     justify-content: center;
