--- a/toxin/src/pages/room-details/room-details.pug
+++ b/toxin/src/pages/room-details/room-details.pug
@@ -35,7 +35,7 @@ block roomDetails-section
                     +formElementsHeader('Впечатления от номера')
 
                     .chart__wrapper
-                        span#actual-font
+                        span.chart__text 260 голосов
                         .chart
                             canvas(id="myChart")
 
