--- a/toxin/src/blocks/form-elements/text-field/text-field.scss
+++ b/toxin/src/blocks/form-elements/text-field/text-field.scss
@@ -11,7 +11,7 @@
     font-weight: normal;
     font-size: 14px;
     line-height: 18px;
-    margin-bottom: 40px;
+    //margin-bottom: 28px;
 }
 
 .text-field:hover{
