правка путей к страницам в index page

--- a/toxin/src/pages/index/index.pug
+++ b/toxin/src/pages/index/index.pug
@@ -1,8 +1,15 @@
 extends ../../base
 
 block title
-    | Header
+    | Index Page
 block main
-    include ../../blocks/logo/logo-main
 
-    h1 index file
+    .index__title
+        h1 Hotel Toxin
+    .index__wrapper
+        a(class="index__link" href="http://makysheva.github.io/toxin/build/colors-type.html" target="_blank") Colors & Type
+        a(class="index__link" href="http://makysheva.github.io/toxin/build/landing.html"  target="_blank") Landing
+        a(class="index__link" href="http://makysheva.github.io/toxin/build/registration.html" target="_blank") Registration
+        a(class="index__link" href="http://makysheva.github.io/toxin/build/sign-in.html" target="_blank") Sign In
+        a(class="index__link" href="http://makysheva.github.io/toxin/build/search-room.html" target="_blank") Search room
+        a(class="index__link" href="http://makysheva.github.io/toxin/build/room-details.html" target="_blank") Room details
