адаптивность colors&type

--- a/toxin/src/pages/index/index.pug
+++ b/toxin/src/pages/index/index.pug
@@ -4,10 +4,15 @@ block title
     | Index Page
 block main
 
-    .index__title
+    .index__descr
         h1 Hotel Toxin
     .index__wrapper
+        p.index__title Ui kit
         a(class="index__link" href="http://makysheva.github.io/toxin/build/colors-type.html" target="_blank") Colors & Type
+        a(class="index__link" href="http://makysheva.github.io/toxin/build/headers-footers.html" target="_blank") Headers & Footers
+        a(class="index__link" href="http://makysheva.github.io/toxin/build/form-elements.html" target="_blank") Form elements
+
+        p.index__title Website pages
         a(class="index__link" href="http://makysheva.github.io/toxin/build/landing.html"  target="_blank") Landing
         a(class="index__link" href="http://makysheva.github.io/toxin/build/registration.html" target="_blank") Registration
         a(class="index__link" href="http://makysheva.github.io/toxin/build/sign-in.html" target="_blank") Sign In
