--- a/toxin/src/pages/index/index.scss
+++ b/toxin/src/pages/index/index.scss
@@ -1,8 +1,14 @@
 .index {
+    &__descr{
+        text-align: center;
+        font-family: Montserrat, OpenSans, sans-serif;
+        margin: 50px 0 25px 0;
+    }
+
     &__title{
         text-align: center;
         font-family: Montserrat, OpenSans, sans-serif;
-        margin: 40px 0;
+        margin: 10px 0;
     }
 
     &__wrapper{
@@ -17,7 +23,7 @@
     }
 
     &__link{
-        padding: 20px 0 15px 0;
+        padding: 15px 0 15px 0;
         text-decoration: none;
         color: rgba(31, 32, 65, 0.5);
         text-transform: uppercase;
