--- a/toxin/src/blocks/colors-type/colors-type.pug
+++ b/toxin/src/blocks/colors-type/colors-type.pug
@@ -1,8 +1,11 @@
 mixin rectangleInfo(colorsClassName, title)
-    .rectangle(class= 'rectangle--' + colorsClassName)
-    .rectangle-descr(class= 'rectangle-descr--' + colorsClassName)
-        span #{title}
+    .rectangle__items
+        .rectangle(class= 'rectangle--' + colorsClassName)
+        .rectangle__title
+            .rectangle-descr(class= 'rectangle-descr--' + colorsClassName)
+                span #{title}
 
 mixin widgetsInfo(widget, widgetTitle, descr, widgetDescr)
-    .widget.widget-items(class= 'widget-title--' + widget)= widgetTitle
-    .widget-item(class= 'widget-descr--' + descr)= widgetDescr
+    .widget__wrapper
+        .widget.widget-items(class= 'widget-title--' + widget)= widgetTitle
+        .widget-item(class= 'widget-descr--' + descr)= widgetDescr
