--- a/toxin/src/pages/form-elements/form-elements.scss
+++ b/toxin/src/pages/form-elements/form-elements.scss
@@ -16,13 +16,6 @@ html, body {
     margin: auto;
 }
 
-.form-elements__wrapper{
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    margin-top: 30px;
-}
-
 .logo {
     width: 48px;
     height: 48px;
@@ -32,41 +25,75 @@ html, body {
 .form-elements{
     max-width: 320px;
     width: 100%;
+
+    &__wrapper{
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        margin-top: 30px;
+        flex-wrap: wrap;
+    }
+
+    &-item{
+        margin-bottom: 60px;
+    }
+
+    &__descr {
+        font-family: Montserrat, OpenSans, sans-serif;
+        font-style: normal;
+        font-weight: bold;
+        font-size: 12px;
+        text-transform: uppercase;
+        color: #1F2041;
+        margin-bottom: 5px;
+        margin-top: 20px;
+    }
+
+    &__dropdown{
+        margin-top: 20px;
+    }
+
+    /* masked text field */
+    &__input--masked{
+        background: #FFFFFF;
+        box-sizing: border-box;
+        margin-bottom: 60px;
+    }
+
+    // фильтр диапазона выбранных дат
+
+    &__filter-date{
+        display: flex;
+        flex-direction: row;
+        width: 266px;
+        height: 44px;
+        border: 1px solid rgba(31, 32, 65, 0.25);
+        border-radius: 4px;
+        padding: 13px 0 13px 15px;
+        align-items: center;
+        cursor: pointer;
+    }
 }
 
-.form-elements-item{
-    margin-bottom: 60px;
+@media (max-width: 1200px){
+    .container{
+        max-width: 900px;
+        margin: 20px;
+        width: 100%;
+    }
+
+    .form-elements__wrapper{
+        justify-content: space-around;
+    }
 }
+@media (max-width: 700px){
+    .form-elements--left{
+        margin-right: 20px;
+    }
 
-.form-elements__descr {
-    font-family: Montserrat, OpenSans, sans-serif;
-    font-style: normal;
-    font-weight: bold;
-    font-size: 12px;
-    text-transform: uppercase;
-    color: #1F2041;
-    margin-bottom: 5px;
-}
-
-/* masked text field */
-.form-elements__input--masked{
-    background: #FFFFFF;
-    box-sizing: border-box;
-    margin-bottom: 60px;
-}
-
-// фильтр диапазона выбранных дат
-
-.form-elements__filter-date{
-    display: flex;
-    flex-direction: row;
-    width: 266px;
-    height: 44px;
-    border: 1px solid rgba(31, 32, 65, 0.25);
-    border-radius: 4px;
-    padding: 13px 0 13px 15px;
-    align-items: center;
-    cursor: pointer;
+    .form-elements__wrapper{
+        justify-content: center;
+    }
 }
 
 .text-field--filter{
