--- a/toxin/src/blocks/headers-footers/mobile-menu/mobile-menu.pug
+++ b/toxin/src/blocks/headers-footers/mobile-menu/mobile-menu.pug
@@ -1,4 +1,4 @@
-mixin elementMenu(element)
+mixin mobileMenu(element)
     li.menu__item
         if (element.subnav)
             li.menu__expander.js-menu__expander
