--- a/toxin/src/blocks/headers-footers/header/header.pug
+++ b/toxin/src/blocks/headers-footers/header/header.pug
@@ -1,5 +1,6 @@
 include ../../form-elements/buttons/buttons
 include ../../headers-footers/menu/menu
+include ../mobile-menu/mobile-menu
 
 mixin header(dataType)
     .header__wrapper
@@ -23,6 +24,28 @@ mixin header(dataType)
                         each element in menuList
                             +elementMenu(element)
 
+                nav.menu__container
+                    ul.mobile__menu
+                        -
+                            let mobileMenuList = [
+                                {title: "О нас", link: "#", showFooter: true,},
+                                {title: "Услуги", link: "#",showFooter: true,
+                                    subnav: [{title: "item 1", link: "#",}, {title: "item 2",link: "#",}]},
+                                {title: "Вакансии", link: "#", showFooter: true,},
+                                {title: "Новости", link: "#", showFooter: true,},
+                                {title: "Соглашения", link: "#", showFooter: true,
+                                    subnav: [{title: "item 1", link: "#",},{title: "item 2",link: "#",}]},
+                            ]
+
+                        each element in mobileMenuList
+                            +mobileMenu(element)
+
+                .mobile__menu--icon.js-mobile__menu
+                    i(class="fa fa-bars" aria-hidden="true")
+
+                .mobile__user
+                    i(class="fa fa-user-circle-o" aria-hidden="true")
+
                 if (dataType === 'headerRegister')
                     .header__button
                         +button('rounded-button', 'Войти')
@@ -31,5 +54,3 @@ mixin header(dataType)
                 else if (dataType === 'headerRegistered')
                     .header__account
                         div.user__account Юлий Цезарь
-
-//- доделать логику, чтобы по-одному открывались под меню
