--- a/toxin/src/blocks/headers-footers/header/header.scss
+++ b/toxin/src/blocks/headers-footers/header/header.scss
@@ -1,5 +1,24 @@
-.header__account{
-    margin-right: 23px;
+.header{
+    &__account{
+        margin-right: 23px;
+
+        @media (max-width: 700px){
+            margin-left: 335px;
+            position: fixed;
+        }
+    }
+
+    &__button{
+        @media (max-width: 1100px){
+            display: none;
+        }
+    }
+
+    &__menu--register{
+        @media (max-width: 1095px){
+            padding-right: 0;
+        }
+    }
 }
 
 .user__account{
@@ -12,4 +31,20 @@
     padding-left: 20px;
     border-left-color: rgba(31, 32, 65, 0.5);
     border-left: 1px solid;
+
+    @media (max-width: 1100px){
+        display: none;
+    }
+}
+
+.mobile__user{
+    display: none;
+    font-size: 20px;
+    color: rgba(31, 32, 65, 0.5);
+    cursor: pointer;
+
+    @media (max-width: 1100px){
+        display: flex;
+        padding-right: 30px;
+    }
 }
