--- a/toxin/src/blocks/headers-footers/menu/menu.scss
+++ b/toxin/src/blocks/headers-footers/menu/menu.scss
@@ -2,6 +2,14 @@
     position: relative;
     right: 30px;
 
+    @media (max-width: 900px){
+        position: initial;
+    }
+
+    @media (max-width: 780px){
+        display: none;
+    }
+
     &__expander{
         font-family: 'Material Icons', OpenSans, sans-serif;
         font-style: normal;
@@ -14,13 +22,13 @@
         color: rgba(31, 32, 65, 0.5);
     }
 
-
-
     &__list{
         display: flex;
         flex-direction: row;
         justify-content: space-between;
         list-style: none;
+        align-items: center;
+        padding-top: 12px;
     }
 
     &__submenu--wrap{
@@ -57,7 +65,8 @@
         line-height: 17px;
         color: rgba(31, 32, 65, 0.5);
         text-decoration: none;
-        padding-right: 20px;
+        padding-bottom: 14px;
+        padding-right: 7px;
     }
 
     &__link--icon{
@@ -66,6 +75,10 @@
 
     &__link--bold{
         font-weight: bold;
+    }
+
+    &__item{
+        padding-bottom: 15px;
     }
 }
 
