--- a/toxin/src/blocks/headers-footers/light-footer/light-footer.scss
+++ b/toxin/src/blocks/headers-footers/light-footer/light-footer.scss
@@ -10,15 +10,15 @@
     flex-direction: column;
     align-items: center;
     margin-bottom: 20px;
-}
 
-.light-footer__content {
-    font-family: Montserrat, OpenSans, sans-serif;
-    font-style: normal;
-    font-weight: normal;
-    font-size: 14px;
-    line-height: 17px;
-    text-align: center;
-    color: rgba(31, 32, 65, 0.75);
-    padding: 20px 0 25px 0
+    &__content {
+        font-family: Montserrat, OpenSans, sans-serif;
+        font-style: normal;
+        font-weight: normal;
+        font-size: 14px;
+        line-height: 17px;
+        text-align: center;
+        color: rgba(31, 32, 65, 0.75);
+        padding: 20px 0 25px 0
+    }
 }
