--- a/toxin/src/pages/form-elements/form-elements.scss
+++ b/toxin/src/pages/form-elements/form-elements.scss
@@ -14,6 +14,12 @@ html, body {
     max-width: 1160px;
     width: 100%;
     margin: auto;
+
+    @media (max-width: 1200px){
+        max-width: 900px;
+        margin: 20px;
+        width: 100%;
+    }
 }
 
 .logo {
@@ -32,6 +38,14 @@ html, body {
         justify-content: space-between;
         margin-top: 30px;
         flex-wrap: wrap;
+
+        @media (max-width: 1200px){
+            justify-content: space-around;
+        }
+
+        @media (max-width: 700px){
+            justify-content: center;
+        }
     }
 
     &-item{
@@ -73,26 +87,11 @@ html, body {
         align-items: center;
         cursor: pointer;
     }
-}
 
-@media (max-width: 1200px){
-    .container{
-        max-width: 900px;
-        margin: 20px;
-        width: 100%;
-    }
-
-    .form-elements__wrapper{
-        justify-content: space-around;
-    }
-}
-@media (max-width: 700px){
-    .form-elements--left{
-        margin-right: 20px;
-    }
-
-    .form-elements__wrapper{
-        justify-content: center;
+    &--left{
+        @media (max-width: 700px){
+            margin-right: 20px;
+        }
     }
 }
 
