--- a/toxin/src/blocks/form-elements/feedback/feedback.scss
+++ b/toxin/src/blocks/form-elements/feedback/feedback.scss
@@ -4,32 +4,66 @@
     left: 515px;
     max-width: 709px;
     width: 100%;
+
+    @media (max-width: 1200px){
+        position: initial;
+    }
+
+    @media (max-width: 700px){
+        max-width: 500px;
+        width: 100%;
+    }
 }
 
-.feedback__avatar-wrapper{
-    margin: 0 10px 12px 0;
-}
+.feedback{
+    &__avatar-wrapper{
+        margin: 0 10px 12px 0;
+    }
 
-.feedback__avatar{
-    width: 48px;
-    height: 48px;
-    border: 2px solid #fff;
-    border-radius: 50%;
-    box-shadow: 0px 10px 20px rgba(31,32,65,0.1);
-}
+    &__avatar{
+        width: 48px;
+        height: 48px;
+        border: 2px solid #fff;
+        border-radius: 50%;
+        box-shadow: 0px 10px 20px rgba(31,32,65,0.1);
+    }
 
-.feedback__author-wrapper{
-    margin-top: 4px;
-}
+    &__author {
+        padding-top: 0.143em;
+        font-family: Montserrat, OpenSans, sans-serif;
+        font-weight: bold;
 
-.feedback__author {
-    padding-top: 0.143em;
-    font-family: Montserrat, OpenSans, sans-serif;
-    font-weight: bold;
-}
+        &-wrapper{
+            margin-top: 4px;
+        }
+    }
 
-.feedback__like{
-    margin-right: 8px;
+    &__like{
+        margin-right: 8px;
+    }
+
+    &__date{
+        font-family: Montserrat;
+        font-style: normal;
+        font-size: 14px;
+        line-height: 24px;
+        color: rgba(31, 32, 65, 0.75);
+    }
+
+    &__text {
+        line-height: 1.72em;
+        margin-top: 2px;
+        font-family: Montserrat;
+        font-style: normal;
+        font-weight: normal;
+        font-size: 14px;
+        line-height: 24px;
+        color: rgba(31, 32, 65, 0.75);
+    }
+
+    &__wrapper{
+        display: flex;
+    }
 }
 
 .like {
@@ -44,79 +78,42 @@
     line-height: .75rem;
     user-select: none;
     margin-right: 10px;
-}
 
-.like_liked {
-    color: #bc9cff;
-}
+    &_liked {
+        color: #bc9cff;
 
-.like__icon {
-    position: absolute;
-    top: 4px;
-    left: 5px;
-    font-family: 'Material Icons';
-    font-weight: normal;
-    font-style: normal;
-    font-size: .625rem;
-    display: inline-block;
-    line-height: .7rem;
-    text-transform: none;
-}
-
-.like__icon_liked {
-    color: #bc9cff;
-}
-
-.like_liked::after {
-    background-image: linear-gradient(180deg, #bc9cff 0%, #8ba4f9 100%);
-}
-
-.like::after {
-    content: '';
-    display: inherit;
-    position: absolute;
-    top: -1px;
-    bottom: -1px;
-    left: -1px;
-    right: -1px;
-    background-color: rgba(31,32,65,0.25);
-    z-index: -1;
-    border-radius: 10px;
-}
-
-.feedback__date{
-    font-family: Montserrat;
-    font-style: normal;
-    font-size: 14px;
-    line-height: 24px;
-    color: rgba(31, 32, 65, 0.75);
-}
-
-.feedback__text {
-    line-height: 1.72em;
-    margin-top: 2px;
-    font-family: Montserrat;
-    font-style: normal;
-    font-weight: normal;
-    font-size: 14px;
-    line-height: 24px;
-    color: rgba(31, 32, 65, 0.75);
-}
-
-.feedback__wrapper{
-    display: flex;
-}
-
-
-@media (max-width: 1200px){
-    .form-elements--bottom{
-        position: initial;
+        &::after {
+            background-image: linear-gradient(180deg, #bc9cff 0%, #8ba4f9 100%);
+        }
     }
-}
 
-@media (max-width: 700px){
-    .form-elements--bottom{
-        max-width: 500px;
-        width: 100%;
+    &__icon {
+        position: absolute;
+        top: 4px;
+        left: 5px;
+        font-family: 'Material Icons';
+        font-weight: normal;
+        font-style: normal;
+        font-size: .625rem;
+        display: inline-block;
+        line-height: .7rem;
+        text-transform: none;
+
+        &_liked {
+            color: #bc9cff;
+        }
+    }
+
+    &::after {
+        content: '';
+        display: inherit;
+        position: absolute;
+        top: -1px;
+        bottom: -1px;
+        left: -1px;
+        right: -1px;
+        background-color: rgba(31,32,65,0.25);
+        z-index: -1;
+        border-radius: 10px;
     }
 }
