--- a/toxin/src/pages/room-details/room-details.scss
+++ b/toxin/src/pages/room-details/room-details.scss
@@ -45,6 +45,7 @@ html, body {
 
 .room-details{
     display: flex;
+    margin-bottom: 84px;
 
     @media (max-width: 1200px){
         justify-content: center;
@@ -57,8 +58,15 @@ html, body {
     }
 
     &__container{
+        position: relative;
+        top: 76px;
+
         @media (max-width: 1200px){
             margin: 0 auto;
+        }
+
+        @media (max-width: 700px){
+            padding: 0 20px;
         }
     }
 
@@ -77,8 +85,15 @@ html, body {
     }
 
     &__bullet{
+        position: relative;
+        top: 75px;
+
         @media (max-width: 1200px){
             margin: auto;
+        }
+
+        @media (max-width: 700px){
+            padding: 0 20px;
         }
     }
 }
@@ -91,14 +106,18 @@ html, body {
         display: flex;
         flex-direction: row;
         align-items: center;
+
+        @media(max-width: 700px){
+            flex-direction: column;
+        }
     }
 
     &__text {
-        position: absolute;
+        position: relative;
         width: 41px;
         height: 30px;
-        left: 462px;
-        top: 697px;
+        left: 88px;
+        top: -75px;
         font-family: Quicksand, OpenSans, sans-serif;
         font-style: normal;
         font-size: 21px;
@@ -106,11 +125,6 @@ html, body {
         align-items: center;
         text-align: center;
         color: #BC9CFF;
-
-        @media (max-width: 1200px){
-            top: 565px;
-            left: 508px;
-        }
     }
 }
 
