--- a/toxin/src/base.pug
+++ b/toxin/src/base.pug
@@ -5,6 +5,7 @@ html
         meta(name='viewport', content="initial-scale=1.0, width=device-width")
         title
             block title
+        include assets/favicons/favicons
         //- link(href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet")
     body
         block main
