правка путей фавиконок

--- a/toxin/src/scss/fonts.scss
+++ b/toxin/src/scss/fonts.scss
@@ -42,8 +42,7 @@
     font-family: 'Material Icons';
     font-style: normal;
     font-weight: 400;
-    src: local('Material Icons'),
-      local('MaterialIcons-Regular'),
+    src:
       url('/fonts/material-icons/material-icons-regular.woff2') format('woff2'),
       url('/fonts/material-icons/material-icons-regular.woff') format('woff'),
       url('/fonts/material-icons/material-icons-regular.ttf') format('opentype'),
