--- a/toxin/src/blocks/cards/gallery/gallery.scss
+++ b/toxin/src/blocks/cards/gallery/gallery.scss
@@ -71,7 +71,7 @@
         &--comments{
             display: flex;
             flex-direction: row;
-            font-family: Montserrat, OpenSans, sans-serif;
+            font-family: 'Montserrat-Regular', 'OpenSans-Regular', sans-serif;
             font-style: normal;
             font-size: 14px;
             color: rgba(31, 32, 65, 0.5);
