--- a/toxin/src/blocks/form-elements/additions/additions.scss
+++ b/toxin/src/blocks/form-elements/additions/additions.scss
@@ -10,7 +10,7 @@
     border-style: solid;
     border-color: rgba(31,32,65,0.1);
     padding: 0 2.5em 1.43em 1.14em;
-    font-family: Montserrat;
+    font-family: 'Montserrat-Regular', sans-serif;
     font-style: normal;
     font-size: 14px;
     line-height: 24px;
@@ -18,8 +18,8 @@
 }
 
 .additions__title {
-    font-family: Montserrat, OpenSans, sans-serif;
-    font-weight: bold;
+    font-family: 'Montserrat-Bold', 'OpenSans-Bold', sans-serif;
+    font-weight: bolder;
 }
 
 .additions__icon {
