--- a/toxin/src/blocks/form-elements/bullet-list/bullet-list.scss
+++ b/toxin/src/blocks/form-elements/bullet-list/bullet-list.scss
@@ -14,7 +14,7 @@
     padding-left: 19px;
     padding-bottom: 14px;
     color: rgba(31,32,65,0.75);
-    font-family: Montserrat, OpenSans, sans-serif;
+    font-family: 'Montserrat-Regular', 'OpenSans-Regular', sans-serif;
     font-size: 0.875rem;
 }
 
