--- a/toxin/src/blocks/form-elements/checkbox/checkbox.scss
+++ b/toxin/src/blocks/form-elements/checkbox/checkbox.scss
@@ -15,7 +15,7 @@
 .checkbox-descr{
     max-width: 222px;
     width: 100%;
-    font-family: Montserrat, OpenSans, sans-serif;
+    font-family: 'Montserrat-Regular', 'OpenSans-Regular', sans-serif;
     font-style: normal;
     font-weight: normal;
     font-size: 14px;
