--- a/toxin/src/blocks/form-elements/email-text-field/email-text-field.scss
+++ b/toxin/src/blocks/form-elements/email-text-field/email-text-field.scss
@@ -19,7 +19,7 @@
 
 .material-icons--email{
     width: 44px;
-    font-family: Material Icons, OpenSans, sans-serif;
+    font-family: 'Material Icons', 'OpenSans-Regular', sans-serif;
     font-style: normal;
     font-weight: normal;
     font-size: 24px;
