--- a/toxin/src/blocks/form-elements/pagination/pagination.scss
+++ b/toxin/src/blocks/form-elements/pagination/pagination.scss
@@ -1,7 +1,7 @@
 .pagination {
     font-size: 0.75rem;
     margin-top: 16px;
-    font-family: Montserrat, OpenSans, sans-serif;
+    font-family: 'Montserrat-Regular', 'OpenSans-Regular', sans-serif;
 }
 
 .pagination__item {
