--- a/toxin/src/blocks/form-elements/text-field/text-field.scss
+++ b/toxin/src/blocks/form-elements/text-field/text-field.scss
@@ -6,12 +6,11 @@
     padding: 13px 15px 13px 15px;
     border: 1px solid rgba(31, 32, 65, 0.25);
     border-radius: 4px;
-    font-family: Montserrat, OpenSans, sans-serif;
+    font-family: 'Montserrat-Regular', 'OpenSans-Regular', sans-serif;
     font-style: normal;
     font-weight: normal;
     font-size: 14px;
     line-height: 18px;
-    //margin-bottom: 28px;
 }
 
 .text-field:hover{
