--- a/toxin/src/blocks/form-elements/toggle/toggle.scss
+++ b/toxin/src/blocks/form-elements/toggle/toggle.scss
@@ -10,7 +10,7 @@
 }
 
 .toggle__descr{
-    font-family: Montserrat, OpenSans, sans-serif;
+    font-family: 'Montserrat-Regular', 'OpenSans-Regular', sans-serif;
     font-style: normal;
     font-weight: normal;
     font-size: 14px;
