--- a/toxin/src/blocks/headers-footers/light-footer/light-footer.scss
+++ b/toxin/src/blocks/headers-footers/light-footer/light-footer.scss
@@ -12,7 +12,7 @@
     margin-bottom: 20px;
 
     &__content {
-        font-family: Montserrat, OpenSans, sans-serif;
+        font-family: 'Montserrat-Regular', 'OpenSans-Regular', sans-serif;
         font-style: normal;
         font-weight: normal;
         font-size: 14px;
