--- a/toxin/src/pages/room-details/room-details.scss
+++ b/toxin/src/pages/room-details/room-details.scss
@@ -1,5 +1,3 @@
-@import '../../scss/fonts.scss';
-
 * {
     margin: 0;
     padding: 0;
@@ -119,7 +117,7 @@ html, body {
         height: 30px;
         left: 88px;
         top: -75px;
-        font-family: 'Quicksand', 'OpenSans', 'sans-serif';
+        font-family: 'Quicksand-Regular', 'OpenSans-Regular', 'sans-serif';
         font-style: normal;
         font-size: 21px;
         display: flex;
@@ -141,7 +139,7 @@ html, body {
     &__element{
         position: relative;
         padding-left: 20px;
-        font-family: 'Montserrat', 'OpenSans', 'sans-serif';
+        font-family: 'Montserrat-Regular', 'OpenSans-Regular', 'sans-serif';
         font-style: normal;
         font-weight: normal;
         font-size: 14px;
@@ -203,7 +201,7 @@ html, body {
     }
 
     &__title{
-        font-family: 'Quicksand', 'OpenSans', 'sans-serif';
+        font-family: 'Quicksand-Regular', 'OpenSans-Regular', 'sans-serif';
         font-style: normal;
         font-weight: bold;
         font-size: 19px;
@@ -215,7 +213,7 @@ html, body {
     }
 
     &__subtitle{
-        font-family: 'Montserrat', 'OpenSans', 'sans-serif';
+        font-family: 'Montserrat-Regular', 'OpenSans-Regular', 'sans-serif';
         font-style: normal;
         font-weight: normal;
         font-size: 14px;
@@ -234,7 +232,7 @@ html, body {
     }
 
     &__descr{
-        font-family: 'Montserrat', 'OpenSans', 'sans-serif';
+        font-family: 'Montserrat-Regular', 'OpenSans-Regular', 'sans-serif';
         font-style: normal;
         font-weight: normal;
         font-size: 14px;
