--- a/toxin/src/blocks/form-elements/calendar/calendar.scss
+++ b/toxin/src/blocks/form-elements/calendar/calendar.scss
@@ -505,7 +505,7 @@
   width: 114px;
   border: 0;
   padding-left: 15px;
-  font-family: Montserrat, OpenSans, sans-serif;
+  font-family: 'Montserrat-Regular', 'OpenSans-Regular', sans-serif;
   font-style: normal;
   font-weight: normal;
   font-size: 14px;
@@ -531,7 +531,7 @@
 .material-icons--left-datepicker{
   width: 38px;
   height: 44px;
-  font-family: Material Icons, OpenSans, sans-serif;
+  font-family: 'Material Icons', 'OpenSans-Regular', sans-serif;
   font-style: normal;
   font-weight: normal;
   font-size: 24px;
