--- a/toxin/src/blocks/form-elements/expander/expander.scss
+++ b/toxin/src/blocks/form-elements/expander/expander.scss
@@ -2,29 +2,14 @@
     padding-bottom: 50px;
 
     &__header{
-        font-family: Montserrat, OpenSans, sans-serif;
+        font-family: 'Montserrat-Bold', 'OpenSans-Bold', sans-serif;
         cursor: pointer;
         user-select: none;
         text-transform: uppercase;
-        font-weight: bold;
+        font-weight: bolder;
         font-size: 0.75rem;
         color: #1f2041;
     }
-
-    // &__header::after {
-    //     content: "";
-    //     display: inline-block;
-    //     position: relative;
-    //     top: -2px;
-    //     left: -16px;
-    //     margin-left: 45px;
-    //     width: 8px;
-    //     height: 8px;
-    //     border-color: rgba(31,32,65,0.5);
-    //     border-style: solid;
-    //     border-width: 0 0 2px 2px;
-    //     transform: rotate(-45deg);
-    // }
 
     &__list {
         display: flex;
