--- a/toxin/src/blocks/form-elements/feedback/feedback.scss
+++ b/toxin/src/blocks/form-elements/feedback/feedback.scss
@@ -30,8 +30,8 @@
 
     &__author {
         padding-top: 0.143em;
-        font-family: Montserrat, OpenSans, sans-serif;
-        font-weight: bold;
+        font-family: 'Montserrat-Bold', 'OpenSans-Bold', sans-serif;
+        font-weight: bolder;
 
         &-wrapper{
             margin-top: 4px;
@@ -43,7 +43,7 @@
     }
 
     &__date{
-        font-family: Montserrat;
+        font-family: 'Montserrat-Regular', 'OpenSans-Regular';
         font-style: normal;
         font-size: 14px;
         line-height: 24px;
@@ -53,7 +53,7 @@
     &__text {
         line-height: 1.72em;
         margin-top: 2px;
-        font-family: Montserrat;
+        font-family: 'Montserrat-Regular', 'OpenSans-Regular';
         font-style: normal;
         font-weight: normal;
         font-size: 14px;
