--- a/toxin/src/blocks/form-elements/radio-btn/radio-btn.scss
+++ b/toxin/src/blocks/form-elements/radio-btn/radio-btn.scss
@@ -44,7 +44,7 @@
     flex-direction: row-reverse;
     margin-left: 20px;
     align-items: center;
-    font-family: Montserrat, OpenSans, sans-serif;
+    font-family: 'Montserrat-Regular', 'OpenSans-Regular', sans-serif;
     font-style: normal;
     font-weight: normal;
     font-size: 14px;
