--- a/toxin/src/blocks/form-elements/slider/slider.scss
+++ b/toxin/src/blocks/form-elements/slider/slider.scss
@@ -1,3 +1,4 @@
+
 .form-elements__slider-wrapper{
     display: flex;
     flex-direction: row;
@@ -30,7 +31,7 @@
     outline: none;
     max-width: 51px;
     width: 100%;
-    font-family: Montserrat, OpenSans, sans-serif;
+    font-family: 'Montserrat-Regular', 'OpenSans-Regular', sans-serif;
     font-style: normal;
     font-weight: normal;
     font-size: 12px;
