--- a/toxin/src/blocks/headers-footers/header/header.scss
+++ b/toxin/src/blocks/headers-footers/header/header.scss
@@ -22,7 +22,7 @@
 }
 
 .user__account{
-    font-family: Montserrat, OpenSans, sans-serif;
+    font-family: 'Montserrat-Regular', 'OpenSans-Regular', sans-serif;
     font-style: normal;
     font-weight: normal;
     font-size: 14px;
