--- a/toxin/src/blocks/headers-footers/menu/menu.scss
+++ b/toxin/src/blocks/headers-footers/menu/menu.scss
@@ -11,7 +11,7 @@
     }
 
     &__expander{
-        font-family: 'Material Icons', OpenSans, sans-serif;
+        font-family: 'Material Icons', 'OpenSans-Regular', sans-serif;
         font-style: normal;
         font-weight: normal;
         font-size: 24px;
@@ -58,7 +58,7 @@
     }
 
     &__link{
-        font-family: Montserrat, OpenSans, sans-serif;
+        font-family: 'Montserrat-Regular', 'OpenSans-Regular', sans-serif;
         font-style: normal;
         font-weight: normal;
         font-size: 14px;
@@ -74,7 +74,8 @@
     }
 
     &__link--bold{
-        font-weight: bold;
+        font-family: 'Montserrat-Bold', 'OpenSans-Bold', sans-serif;
+        font-weight: bolder;
     }
 
     &__item{
