--- a/toxin/src/pages/form-elements/form-elements.scss
+++ b/toxin/src/pages/form-elements/form-elements.scss
@@ -1,5 +1,3 @@
-@import '../../scss/fonts.scss';
-
 * {
     margin: 0;
     padding: 0;
@@ -55,7 +53,7 @@ html, body {
     }
 
     &__descr {
-        font-family: 'Montserrat', 'OpenSans', sans-serif;
+        font-family: 'Montserrat-Bold', 'OpenSans-Bold', sans-serif;
         font-style: normal;
         font-weight: bolder;
         font-size: 12px;
@@ -103,7 +101,7 @@ html, body {
     box-sizing: border-box;
     outline: none;
     border: none;
-    font-family: 'Montserrat', 'OpenSans', sans-serif;
+    font-family: 'Montserrat-Bold', 'OpenSans-Bold', sans-serif;
     font-style: normal;
     font-weight: bolder;
     font-size: 14px;
@@ -114,7 +112,7 @@ html, body {
 .material-icons--filter{
     width: 38px;
     height: 44px;
-    font-family: 'Material Icons', 'OpenSans', sans-serif;
+    font-family: 'Material Icons', 'OpenSans-Regular', sans-serif;
     font-style: normal;
     font-weight: normal;
     font-size: 24px;
