--- a/toxin/src/pages/index/index.scss
+++ b/toxin/src/pages/index/index.scss
@@ -1,16 +1,14 @@
-@import '../../scss/fonts.scss';
-
 .index {
     &__descr{
         text-align: center;
-        font-family: 'Montserrat', 'OpenSans', 'sans-serif';
+        font-family: 'Montserrat-Regular', 'OpenSans-Regular', 'sans-serif';
         margin: 50px 0 25px 0;
         font-weight: normal;
     }
 
     &__title{
         text-align: center;
-        font-family: 'Montserrat', 'OpenSans', 'sans-serif';
+        font-family: 'Montserrat-Bold', 'OpenSans-Bold', 'sans-serif';
         margin: 10px 0;
         font-weight: bolder;
     }
@@ -32,7 +30,7 @@
         color: rgba(31, 32, 65, 0.5);
         text-transform: uppercase;
         font-size: 20px;
-        font-family: 'Montserrat', 'OpenSans', sans-serif;
+        font-family: 'Montserrat-Regular', 'OpenSans-Regular', sans-serif;
         font-weight: normal;
 
         &:hover{
